gen/mysql_expressionsParser.java
// Generated from mysql_expressions.g4 by ANTLR 4.5
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class mysql_expressionsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, SELECT=4, DISTINCT=5, ANY=6, ALL=7, SOME=8, EXISTS=9, 
		SQL_SMALL_RESULT=10, CONCAT=11, UNION=12, ON=13, FROM=14, JOIN=15, INNER_JOIN=16, 
		LEFT=17, RIGHT=18, OUTER=19, STRAIGHT_JOIN=20, WHERE=21, GROUP_BY=22, 
		HAVING=23, ORDER_BY=24, SQ=25, DOT=26, COMMA=27, AS=28, DESC=29, LIMIT=30, 
		LIMIT_SIZE=31, OFFSET=32, DUAL=33, TABLE_NAME=34, SUBQUERY_TABLE_NAME=35, 
		CHILD_SUBQUERY_TABLE_NAME=36, ALIAS=37, FIELDTK=38, PK=39, GRAVE=40, COLUMN=41, 
		COL_TYPE=42, DIGIT=43, CHAR=44, EQUAL=45, PERCENT=46, ASTERISK=47, SEMI=48, 
		AGGREGATE_OP=49, LIKE=50, AND_OR=51, IS=52, NOT=53, BETWEEN=54, IN=55, 
		NULL=56, LPAREN=57, RPAREN=58, SYM=59, OP=60, COMPARE_OP=61, WORD=62, 
		WS=63;
	public static final int
		RULE_query = 0, RULE_explain = 1, RULE_select_list = 2, RULE_simple_select_list = 3, 
		RULE_aggregate_select_list = 4, RULE_new_select_item = 5, RULE_nonaggregate_select_item = 6, 
		RULE_aggregate_select_item = 7, RULE_combo_select_item = 8, RULE_select_subquery = 9, 
		RULE_select_subquery_body_disabled = 10, RULE_join_list = 11, RULE_join_list_disabled = 12, 
		RULE_join_type = 13, RULE_join_condition_item = 14, RULE_where_clause = 15, 
		RULE_where_subquery = 16, RULE_where_list = 17, RULE_generic_where_list = 18, 
		RULE_where_item = 19, RULE_ranged_where_list = 20, RULE_ranged_where_item = 21, 
		RULE_on_subquery = 22, RULE_general_subquery = 23, RULE_general_subquery_union_test_disabled = 24, 
		RULE_special_subquery = 25, RULE_single_union_subquery = 26, RULE_single_union_subquery_disabled = 27, 
		RULE_double_subquery = 28, RULE_correlated_subquery = 29, RULE_single_subquery = 30, 
		RULE_int_scalar_subquery = 31, RULE_subquery_body = 32, RULE_subquery_join_list = 33, 
		RULE_subquery_join_condition_item = 34, RULE_correlated_subquery_where_list = 35, 
		RULE_subquery_where_list = 36, RULE_correlated_subquery_where_item = 37, 
		RULE_subquery_where_item = 38, RULE_subquery_group_by = 39, RULE_subquery_having = 40, 
		RULE_subquery_having_item = 41, RULE_group_by_clause = 42, RULE_having_clause = 43, 
		RULE_having_item = 44, RULE_order_by_clause = 45, RULE_order_by_list = 46, 
		RULE_order_by_item = 47, RULE_total_order_by = 48, RULE_limit_rule = 49, 
		RULE_membership_operator = 50, RULE_all_any = 51, RULE_value = 52, RULE_table = 53, 
		RULE_new_table = 54, RULE_from_subquery = 55, RULE_new_subquery_table = 56, 
		RULE_subquery_table = 57, RULE_field = 58, RULE_aggregate = 59;
	public static final String[] ruleNames = {
		"query", "explain", "select_list", "simple_select_list", "aggregate_select_list", 
		"new_select_item", "nonaggregate_select_item", "aggregate_select_item", 
		"combo_select_item", "select_subquery", "select_subquery_body_disabled", 
		"join_list", "join_list_disabled", "join_type", "join_condition_item", 
		"where_clause", "where_subquery", "where_list", "generic_where_list", 
		"where_item", "ranged_where_list", "ranged_where_item", "on_subquery", 
		"general_subquery", "general_subquery_union_test_disabled", "special_subquery", 
		"single_union_subquery", "single_union_subquery_disabled", "double_subquery", 
		"correlated_subquery", "single_subquery", "int_scalar_subquery", "subquery_body", 
		"subquery_join_list", "subquery_join_condition_item", "correlated_subquery_where_list", 
		"subquery_where_list", "correlated_subquery_where_item", "subquery_where_item", 
		"subquery_group_by", "subquery_having", "subquery_having_item", "group_by_clause", 
		"having_clause", "having_item", "order_by_clause", "order_by_list", "order_by_item", 
		"total_order_by", "limit_rule", "membership_operator", "all_any", "value", 
		"table", "new_table", "from_subquery", "new_subquery_table", "subquery_table", 
		"field", "aggregate"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'EXPLAIN'", "'EXPLAIN EXTENDED'", "'1'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, "SELECT", "DISTINCT", "ANY", "ALL", "SOME", "EXISTS", 
		"SQL_SMALL_RESULT", "CONCAT", "UNION", "ON", "FROM", "JOIN", "INNER_JOIN", 
		"LEFT", "RIGHT", "OUTER", "STRAIGHT_JOIN", "WHERE", "GROUP_BY", "HAVING", 
		"ORDER_BY", "SQ", "DOT", "COMMA", "AS", "DESC", "LIMIT", "LIMIT_SIZE", 
		"OFFSET", "DUAL", "TABLE_NAME", "SUBQUERY_TABLE_NAME", "CHILD_SUBQUERY_TABLE_NAME", 
		"ALIAS", "FIELDTK", "PK", "GRAVE", "COLUMN", "COL_TYPE", "DIGIT", "CHAR", 
		"EQUAL", "PERCENT", "ASTERISK", "SEMI", "AGGREGATE_OP", "LIKE", "AND_OR", 
		"IS", "NOT", "BETWEEN", "IN", "NULL", "LPAREN", "RPAREN", "SYM", "OP", 
		"COMPARE_OP", "WORD", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "mysql_expressions.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public mysql_expressionsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class QueryContext extends ParserRuleContext {
		public ArrayList<Integer> tables =  new ArrayList<Integer>();
		public ArrayList<String> select_fields =  new ArrayList<String>();
		public int where_index =  -1;;
		public TerminalNode SELECT() { return getToken(mysql_expressionsParser.SELECT, 0); }
		public Simple_select_listContext simple_select_list() {
			return getRuleContext(Simple_select_listContext.class,0);
		}
		public TerminalNode FROM() { return getToken(mysql_expressionsParser.FROM, 0); }
		public Join_listContext join_list() {
			return getRuleContext(Join_listContext.class,0);
		}
		public Where_clauseContext where_clause() {
			return getRuleContext(Where_clauseContext.class,0);
		}
		public Having_clauseContext having_clause() {
			return getRuleContext(Having_clauseContext.class,0);
		}
		public Order_by_clauseContext order_by_clause() {
			return getRuleContext(Order_by_clauseContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(mysql_expressionsParser.SEMI, 0); }
		public ExplainContext explain() {
			return getRuleContext(ExplainContext.class,0);
		}
		public TerminalNode DISTINCT() { return getToken(mysql_expressionsParser.DISTINCT, 0); }
		public TerminalNode STRAIGHT_JOIN() { return getToken(mysql_expressionsParser.STRAIGHT_JOIN, 0); }
		public TerminalNode SQL_SMALL_RESULT() { return getToken(mysql_expressionsParser.SQL_SMALL_RESULT, 0); }
		public Group_by_clauseContext group_by_clause() {
			return getRuleContext(Group_by_clauseContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mysql_expressionsListener ) ((mysql_expressionsListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mysql_expressionsListener ) ((mysql_expressionsListener)listener).exitQuery(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_query);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			_la = _input.LA(1);
			if (_la==T__0 || _la==T__1) {
				{
				setState(120);
				explain();
				}
			}

			setState(123);
			match(SELECT);
			setState(125);
			_la = _input.LA(1);
			if (_la==DISTINCT) {
				{
				setState(124);
				match(DISTINCT);
				}
			}

			setState(128);
			_la = _input.LA(1);
			if (_la==STRAIGHT_JOIN) {
				{
				setState(127);
				match(STRAIGHT_JOIN);
				}
			}

			setState(131);
			_la = _input.LA(1);
			if (_la==SQL_SMALL_RESULT) {
				{
				setState(130);
				match(SQL_SMALL_RESULT);
				}
			}

			setState(133);
			simple_select_list();
			setState(134);
			match(FROM);
			setState(135);
			join_list();
			((QueryContext)_localctx).where_index =  _input.getText(_localctx.start, _input.LT(-1)).length();
			setState(137);
			where_clause();
			setState(139);
			_la = _input.LA(1);
			if (_la==GROUP_BY) {
				{
				setState(138);
				group_by_clause();
				}
			}

			setState(141);
			having_clause();
			setState(142);
			order_by_clause();
			setState(143);
			match(SEMI);

			    java.util.Random rng = new java.util.Random(0);
			    String query = _input.getText(_localctx.start, _input.LT(-1));

			    String[] types = {"int", "varchar"};
			    String[] is_key = {"key", "nokey"};
			    String[] and_or = {"AND", "OR"};
			    String[] compare = {"=", "<", ">", "!=", "<>", "<=", ">="};

			    String select_more = " " ;

			    for(int i = 1; i <= _localctx.tables.size(); i++){
			        Boolean duplicate_field = true;
			        String new_field = "";

			        //make sure we do not select same field twice
			        while(duplicate_field){
			            String type = types[rng.nextInt(types.length)];
			            String key = is_key[rng.nextInt(is_key.length)];
			            new_field = "";

			            new_field += "alias" + i + ".";
			            if(rng.nextInt(100) < 90)
			                new_field += "`col_" + type + "_" + key + "`";
			            else
			                new_field += "`pk`";

			            duplicate_field = false;
			            for(String f : _localctx.select_fields){
			                if(f.equals(new_field))
			                    duplicate_field = true;
			            }//for
			        }//while

			        select_more += new_field;
			        select_more += " AS ";
			        select_more += "field" + (_localctx.select_fields.size() + i);
			        select_more += ", ";
			    }//for

			    select_more += ' ';

			    query = query.replaceFirst("SELECT", "SELECT" + select_more);

			    String where_more = "\n";

			    for(int i=0; i<4; i++){
			        String alias = "alias" + (rng.nextInt(_localctx.tables.size())+1);

			        String type = types[rng.nextInt(types.length)];
			        String key = is_key[rng.nextInt(is_key.length)];
			        String conj = and_or[rng.nextInt(and_or.length)];
			        String op = compare[rng.nextInt(compare.length)];

			        String characters = "abcdefghijklmnopqrstuvwxyz";
			        String value = "";
			        if(type.equals("int"))
			            value = Integer.toString(rng.nextInt() % 100);
			        else if(type.equals("varchar")){
			            for(int j=0; j<5; j++)
			                value += characters.charAt(rng.nextInt(characters.length()));
			        }

			        where_more += alias + ".";
			        where_more += "`col_" + type + "_" + key + "`";
			        where_more += " " + op + " " + value + " " + conj + " ";
			    }
			    where_more += "\n";
			    _localctx.where_index += select_more.length() + "WHERE ".length();
			    query = query.substring(0, _localctx.where_index-1) + where_more + query.substring(_localctx.where_index);

			    try{
			        java.io.PrintWriter outfile = new java.io.PrintWriter("../out.txt");
			        outfile.print(query);
			        outfile.close();
			    } catch (java.io.FileNotFoundException e){
			        System.err.println("Cannot open output file");
			    }
			 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExplainContext extends ParserRuleContext {
		public ExplainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_explain; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mysql_expressionsListener ) ((mysql_expressionsListener)listener).enterExplain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mysql_expressionsListener ) ((mysql_expressionsListener)listener).exitExplain(this);
		}
	}

	public final ExplainContext explain() throws RecognitionException {
		ExplainContext _localctx = new ExplainContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_explain);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			_la = _input.LA(1);
			if ( !(_la==T__0 || _la==T__1) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Select_listContext extends ParserRuleContext {
		public List<New_select_itemContext> new_select_item() {
			return getRuleContexts(New_select_itemContext.class);
		}
		public New_select_itemContext new_select_item(int i) {
			return getRuleContext(New_select_itemContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(mysql_expressionsParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(mysql_expressionsParser.COMMA, i);
		}
		public Select_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mysql_expressionsListener ) ((mysql_expressionsListener)listener).enterSelect_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mysql_expressionsListener ) ((mysql_expressionsListener)listener).exitSelect_list(this);
		}
	}

	public final Select_listContext select_list() throws RecognitionException {
		Select_listContext _localctx = new Select_listContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_select_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			new_select_item();
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(149);
				match(COMMA);
				setState(150);
				new_select_item();
				}
				}
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Simple_select_listContext extends ParserRuleContext {
		public List<Nonaggregate_select_itemContext> nonaggregate_select_item() {
			return getRuleContexts(Nonaggregate_select_itemContext.class);
		}
		public Nonaggregate_select_itemContext nonaggregate_select_item(int i) {
			return getRuleContext(Nonaggregate_select_itemContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(mysql_expressionsParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(mysql_expressionsParser.COMMA, i);
		}
		public Simple_select_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simple_select_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mysql_expressionsListener ) ((mysql_expressionsListener)listener).enterSimple_select_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mysql_expressionsListener ) ((mysql_expressionsListener)listener).exitSimple_select_list(this);
		}
	}

	public final Simple_select_listContext simple_select_list() throws RecognitionException {
		Simple_select_listContext _localctx = new Simple_select_listContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_simple_select_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			nonaggregate_select_item();
			setState(161);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(157);
				match(COMMA);
				setState(158);
				nonaggregate_select_item();
				}
				}
				setState(163);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Aggregate_select_listContext extends ParserRuleContext {
		public List<Aggregate_select_itemContext> aggregate_select_item() {
			return getRuleContexts(Aggregate_select_itemContext.class);
		}
		public Aggregate_select_itemContext aggregate_select_item(int i) {
			return getRuleContext(Aggregate_select_itemContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(mysql_expressionsParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(mysql_expressionsParser.COMMA, i);
		}
		public Aggregate_select_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aggregate_select_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mysql_expressionsListener ) ((mysql_expressionsListener)listener).enterAggregate_select_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mysql_expressionsListener ) ((mysql_expressionsListener)listener).exitAggregate_select_list(this);
		}
	}

	public final Aggregate_select_listContext aggregate_select_list() throws RecognitionException {
		Aggregate_select_listContext _localctx = new Aggregate_select_listContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_aggregate_select_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			aggregate_select_item();
			setState(169);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(165);
				match(COMMA);
				setState(166);
				aggregate_select_item();
				}
				}
				setState(171);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class New_select_itemContext extends ParserRuleContext {
		public Nonaggregate_select_itemContext nonaggregate_select_item() {
			return getRuleContext(Nonaggregate_select_itemContext.class,0);
		}
		public Aggregate_select_itemContext aggregate_select_item() {
			return getRuleContext(Aggregate_select_itemContext.class,0);
		}
		public Combo_select_itemContext combo_select_item() {
			return getRuleContext(Combo_select_itemContext.class,0);
		}
		public Select_subqueryContext select_subquery() {
			return getRuleContext(Select_subqueryContext.class,0);
		}
		public New_select_itemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_new_select_item; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mysql_expressionsListener ) ((mysql_expressionsListener)listener).enterNew_select_item(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mysql_expressionsListener ) ((mysql_expressionsListener)listener).exitNew_select_item(this);
		}
	}
